# bootty

./: .gitignore  AGENTS.md  Cargo.toml  Cross.toml  README.md  benchmarks.tmp.md  mise.toml  package.json
.cargo/: config.toml
.config/: hakari.toml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
benchmarks/: launcher-matrix.json  profiles.json  result-schema.json
crates/bootty/: Cargo.toml
crates/bootty-app/: Cargo.toml  build.rs
crates/bootty-app/assets/: icons-lucide.json
crates/bootty-app/assets/bootty.icon/: icon.json
crates/bootty-app/benches/: app_frame.rs  cell_diff.rs  graphics_protocols.rs  hostile_input.rs  idle_overhead.rs  input_latency.rs  input_protocols.rs  kitty_image.rs  multiplexer.rs  paint_plan.rs  paint_plan_fixtures.rs  paint_plan_wgpu.rs  panes_multiwindow.rs  parser_control.rs  pipeline_resources.rs  power_thermal.rs  real_app_replay.rs  remote_session.rs  render_pacing.rs  resize_reflow.rs  scrollback.rs  startup_config.rs  startup_milestones.rs  text_atlas.rs  vt_correctness.rs
crates/bootty-app/examples/: bare.rs  egui-tabs.rs
crates/bootty-app/src/: action_catalog.rs  app.rs  app_actions.rs  assets.rs  cli.rs  config.rs  config_reload.rs  config_tests.rs  extension_ui.luau  extensions.rs  git.rs  layout.rs  lib.rs  main.rs  menu.rs  native_host.rs  platform.rs  project_catalog.rs  renderer.rs  session_names.rs  session_order.rs  shell_env.rs  status_module.rs  strings.rs  terminal.rs  theme.rs  worktree_catalog.rs
crates/bootty-app/src/app/: mod.rs  state.rs
crates/bootty-app/src/app/state/: copy_mode.rs  diagnostic_actions.rs  recorded_chord.rs  selection.rs
crates/bootty-app/src/cli/: config_overrides.rs
crates/bootty-app/src/extensions/: codexbar.rs  http.rs
crates/bootty-app/src/mux/: tmux.rs
crates/bootty-app/src/sidebar_defaults/: codexbar.luau  sessions.luau
crates/bootty-app/src/status_defaults/: clock.luau  session.luau  sysinfo.luau  windows.luau
crates/bootty-app/src/ui/: chrome.rs  command_palette.rs  ditch.rs  icons.rs  keybind_help.rs  keycaps.rs  lua_window.rs  mod.rs  new_session_picker.rs  rename.rs  session_picker.rs  sidebar.rs  terminal_find.rs  theme_picker.rs
crates/bootty-app/src/ui/chrome/: item_primitives.rs  sidebar_panel.rs  status_bar.rs
crates/bootty-app/src/ui/new_session_picker/: model.rs
crates/bootty-app/src/ui/overlay/: list.rs  menu.rs  mod.rs  prompt.rs
crates/bootty-app/src/ui/settings/: appearance.rs  font.rs  keybinds.rs  mod.rs  session.rs  status_bar.rs  window.rs
crates/bootty-app/src/ui/settings/keybinds/: model.rs  trigger_edit.rs
crates/bootty-app/tests/: bare_terminal_host.rs  kitty_image_state.rs  renderer_frame_contract.rs  renderer_surface_composition.rs  sprite_terminal_pipeline.rs  terminal_background_wgpu.rs  terminal_render_command_boundary.rs  terminal_sprite_face.rs  terminal_text_atlas.rs
crates/bootty-app/windows/: bootty.rc
crates/bootty-config/: Cargo.toml
crates/bootty-config/src/: color.rs  config.rs  config_reload.rs  config_tests.rs  lib.rs
crates/bootty-config/src/config/: keybind_presets.rs  theme_catalog.rs
crates/bootty-mux/: Cargo.toml
crates/bootty-mux/src/: command.rs  config.rs  controller.rs  lib.rs  native.rs  process.rs  rmux.rs  rmux_bridge.rs  sidebar_meta.rs  snapshot.rs  tmux.rs  zellij.rs
crates/bootty-mux/src/terminal/: mod.rs  pane.rs  rmux_native.rs  startup.rs  tmux_control.rs
crates/bootty-render/: Cargo.toml
crates/bootty-render/src/: font_database.rs  lib.rs  paint_plan.rs  renderer_frame.rs  terminal_font_face.rs  terminal_font_tables.rs  terminal_render.rs  terminal_text.rs  terminal_text_atlas.rs  terminal_wgpu.rs
crates/bootty-render/src/terminal_sprite/: tests.rs
crates/bootty-render/src/terminal_text_atlas/: coretext.rs  shaping.rs  windows_gdi.rs
crates/bootty-render/src/terminal_text_atlas/tests/: terminal_text_atlas.rs
crates/bootty-render/src/terminal_wgpu/: font_lookup.rs  glyph_draw.rs  image_upload.rs  pipelines.rs  vertices.rs
crates/bootty-render/src/terminal_wgpu/tests/: terminal_wgpu.rs
crates/bootty-runtime/: Cargo.toml
crates/bootty-runtime/assets/: xterm-bootty.terminfo
crates/bootty-runtime/benches/: flood_response.rs  pty_drain.rs
crates/bootty-runtime/src/: benchmark_trace.rs  lib.rs  render_source.rs  scheduler.rs  terminal_session.rs  terminfo.rs
crates/bootty-site/: Cargo.toml
crates/bootty-site/src/: backend.rs  components.rs  constants.rs  content.rs  input.rs  layout.rs  lib.rs  palette.rs  tests.rs  web_frame.rs
crates/bootty-surface/: Cargo.toml
crates/bootty-surface/src/: geometry.rs  lib.rs  selection.rs
crates/bootty-terminal/: Cargo.toml
crates/bootty-terminal/src/: ghostty_ffi_compat.rs  lib.rs  terminal_engine.rs  terminal_frame.rs  terminal_image.rs  terminal_input_model.rs  terminal_palette.rs  terminal_png_decoder.rs
crates/bootty-terminal/src/terminal_engine/: logical_search.rs  write_ingress.rs
crates/bootty-terminal/src/terminal_engine/tests/: features.rs  images.rs  keys.rs  mod.rs
crates/bootty-terminal/src/terminal_engine/tests/terminal_engine/: copy_mode_tests.rs  focus_tests.rs  mod.rs  mouse_tests.rs  paste_tests.rs  report_tests.rs  style_frame_tests.rs
crates/bootty-terminal/src/terminal_image/: virtual_placement.rs
crates/bootty-terminal/tests/: dirty_tracking.rs
crates/bootty-winit/: Cargo.toml
crates/bootty-winit/src/: bare_host.rs  direct_input.rs  file_paths.rs  input.rs  input_binding.rs  input_binding_set.rs  input_keymap.rs  lib.rs
crates/bootty/src/: lib.rs
docs/: architecture.md  benchmark-report.md  benchmarking.md  built-in-themes.md  configuration.md  current-egui-behavior.md  input-encoders.md  libghostty-rs.md  performance.md  sample-config.toml
scripts/: build-benchmark-dashboard.py  build-bootty-unix.sh  build-bootty-windows.ps1  install-bootty-unix.sh  install-bootty-windows.ps1  launch-bootty-unix.sh  launch-bootty-windows.ps1  package-bootty-unix.sh  package-bootty-windows.ps1  record-replay-fixture.sh  run-benchmark-suite.sh  run-external-benchmark-adapters.py  (+5 more)
(+37 files in other folders)
