[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }

large_types_passed_by_value = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
too_many_lines = "allow"

[workspace.dependencies]
ab_glyph = "0.2"
anyhow = "1"
arboard = "3"
criterion = "0.8"
derive_more = { version = "2.1.1", default-features = false, features = [
  "deref",
  "deref_mut",
] }
eframe = { version = "0.34", default-features = false, features = [
  "accesskit",
  "default_fonts",
  "wgpu_no_default_features",
] }
egui = "0.34"
epaint_default_fonts = "0.34"
fontdb = "0.23"
indoc = "2"
libghostty-vt = { git = "https://github.com/Uzaaft/libghostty-rs.git", rev = "20edad15d7984c727acc4f4facdadf045609f543", features = [
  "png",
] }
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = [
  "NSApplication",
  "NSScreen",
  "NSWindow",
] }
objc2-foundation = { version = "0.3", default-features = false, features = [
  "NSGeometry",
  "objc2-core-foundation",
] }
pollster = "0.4"
png = "0.18"
portable-pty = "0.9"
proptest = "1"
rmux-sdk = "0.5"
rmux-ipc = "0.5"
rmux-proto = "0.5"
rstest = "0.26"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
smallvec = "1"
syntect = { version = "5.3", default-features = false, features = [
  "default-fancy",
] }
tauri = { version = "2", default-features = true }
tauri-build = { version = "2", features = [] }
tempfile = "3"
tokio = "1.48.0"
toml_edit = { version = "0.25", features = ["serde"] }
ttf-parser = "0.25"
tuirealm = { version = "4.1.0", default-features = false, features = ["derive"] }
tui-markdown = { version = "0.3.7", default-features = false }
unicode-width = "0.2"
wasm-bindgen = "0.2"
wgpu = { version = "29", default-features = false, features = [
  "parking_lot",
  "std",
  "wgsl",
] }
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }

[profile.dev]
debug = "limited"

[profile.profiling]
inherits = "release"
debug = "full"
lto = false
strip = false

[profile.release]
lto = "fat"
split-debuginfo = "off"
