[package]
name = "bootty-app"
edition.workspace = true

[[bin]]
name = "bootty"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
arboard.workspace = true
derive_more.workspace = true
eframe.workspace = true
fontdb.workspace = true
libghostty-vt.workspace = true
bootty-winit = { path = "../bootty-winit", default-features = false }
bootty-ui = { path = "../bootty-ui" }
bootty-render = { path = "../bootty-render" }
bootty-runtime = { path = "../bootty-runtime" }
bootty-surface = { path = "../bootty-surface" }
bootty-terminal = { path = "../bootty-terminal" }
png.workspace = true
rmux-ipc.workspace = true
rmux-proto.workspace = true
rmux-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt"] }
toml_edit.workspace = true
wgpu.workspace = true
winit.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2.workspace = true
objc2-app-kit.workspace = true
objc2-foundation.workspace = true
wgpu = { workspace = true, features = ["metal"] }

[target.'cfg(target_os = "linux")'.dependencies]
eframe = { workspace = true, features = ["wayland", "x11"] }
wgpu = { workspace = true, features = ["gles", "vulkan"] }
winit = { workspace = true, features = ["wayland", "x11"] }

[target.'cfg(target_os = "windows")'.dependencies]
wgpu = { workspace = true, features = ["dx12"] }

[dev-dependencies]
bootty-winit = { path = "../bootty-winit", features = ["bare-host"] }
criterion.workspace = true
indoc.workspace = true
pollster.workspace = true
proptest.workspace = true
rstest.workspace = true
tempfile.workspace = true

[[bench]]
name = "paint_plan"
harness = false
