[package]
name = "bootty-app"
edition.workspace = true

[[bin]]
name = "bootty"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
arboard.workspace = true
eframe.workspace = true
iconflow.workspace = true
fontdb.workspace = true
libghostty-vt.workspace = true
bootty-winit = { path = "../bootty-winit", default-features = false }
bootty-config = { path = "../bootty-config" }
bootty-mux = { path = "../bootty-mux" }
bootty-ui = { path = "../bootty-ui" }
bootty-render = { path = "../bootty-render" }
bootty-runtime = { path = "../bootty-runtime" }
bootty-surface = { path = "../bootty-surface" }
bootty-terminal = { path = "../bootty-terminal" }
png.workspace = true
rusqlite.workspace = true
serde.workspace = true
starship-battery.workspace = true
sysinfo.workspace = true
wgpu.workspace = true
winit.workspace = true
keepawake.workspace = true
mlua = { version = "0.11.6", features = ["luau"] }

[target.'cfg(target_os = "macos")'.dependencies]
muda.workspace = true
objc2.workspace = true
objc2-app-kit.workspace = true
objc2-foundation.workspace = true
wgpu = { workspace = true, features = ["metal"] }

[target.'cfg(target_os = "linux")'.dependencies]
eframe = { workspace = true, features = ["wayland", "x11"] }
wgpu = { workspace = true, features = ["gles", "vulkan"] }
winit = { workspace = true, features = ["wayland", "x11"] }

[target.'cfg(target_os = "windows")'.dependencies]
wgpu = { workspace = true, features = ["dx12"] }

[dev-dependencies]
bootty-winit = { path = "../bootty-winit", features = ["bare-host"] }
criterion.workspace = true
indoc.workspace = true
pollster.workspace = true
proptest.workspace = true
rstest.workspace = true
tempfile.workspace = true

[[bench]]
name = "paint_plan"
harness = false

[[bench]]
name = "paint_plan_wgpu"
harness = false

[[bench]]
name = "startup_config"
harness = false

[[bench]]
name = "kitty_image"
harness = false

[[bench]]
name = "app_frame"
harness = false

[[bench]]
name = "text_atlas"
harness = false

[[bench]]
name = "hostile_input"
harness = false

[[bench]]
name = "panes_multiwindow"
harness = false

[[bench]]
name = "remote_session"
harness = false

[[bench]]
name = "real_app_replay"
harness = false

[[bench]]
name = "startup_milestones"
harness = false

[[bench]]
name = "resize_reflow"
harness = false

[[bench]]
name = "scrollback"
harness = false

[[bench]]
name = "parser_control"
harness = false

[[bench]]
name = "render_pacing"
harness = false

[[bench]]
name = "input_latency"
harness = false

[[bench]]
name = "idle_overhead"
harness = false

[[bench]]
name = "input_protocols"
harness = false

[[bench]]
name = "graphics_protocols"
harness = false

[[bench]]
name = "multiplexer"
harness = false

[[bench]]
name = "power_thermal"
harness = false
