[package]
name = "bootty-render"
edition.workspace = true

[dependencies]
ab_glyph.workspace = true
anyhow.workspace = true
eframe.workspace = true
fontdb.workspace = true
libghostty-vt.workspace = true
bootty-surface = { path = "../bootty-surface" }
bootty-terminal = { path = "../bootty-terminal" }
png.workspace = true
rustybuzz.workspace = true
smallvec.workspace = true
ttf-parser.workspace = true
unicode-width.workspace = true
wgpu.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
wgpu = { workspace = true, features = ["metal"] }

[target.'cfg(target_os = "linux")'.dependencies]
eframe = { workspace = true, features = ["wayland", "x11"] }
wgpu = { workspace = true, features = ["gles", "vulkan"] }

[target.'cfg(target_os = "windows")'.dependencies]
wgpu = { workspace = true, features = ["dx12"] }
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_Graphics_Gdi"] }

[dev-dependencies]
epaint_default_fonts.workspace = true
proptest.workspace = true
