[package]
name = "bootty-runtime"
edition.workspace = true

[dependencies]
anyhow.workspace = true
bootty-surface = { path = "../bootty-surface" }
bootty-terminal = { path = "../bootty-terminal" }
portable-pty.workspace = true
bootty-workspace-hack = { version = "0.1", path = "../bootty-workspace-hack" }

[[bench]]
name = "pty_drain"
harness = false

[[bench]]
name = "flood_response"
harness = false

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true
tempfile.workspace = true
