[package]
name = "bootty-site"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
png.workspace = true
serde.workspace = true
serde-wasm-bindgen.workspace = true
tuirealm.workspace = true
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = ["Window"] }
