[package]
name = "bootty-site"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bootty-surface = { path = "../bootty-surface", default-features = false }
egui.workspace = true
png.workspace = true
serde.workspace = true
serde-wasm-bindgen.workspace = true
syntect.workspace = true
tuirealm.workspace = true
tui-markdown.workspace = true
wasm-bindgen.workspace = true
