[package]
name = "bootty-surface"
edition.workspace = true

[features]
default = ["geometry"]
geometry = ["dep:eframe"]

[dependencies]
eframe = { workspace = true, optional = true }
bootty-workspace-hack = { version = "0.1", path = "../bootty-workspace-hack" }

[target.'cfg(target_os = "linux")'.dependencies]
eframe = { workspace = true, features = ["wayland", "x11"] }

[dev-dependencies]
proptest.workspace = true
