[package]
name = "bootty-terminal"
edition.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
libghostty-vt.workspace = true
memchr.workspace = true
bootty-surface = { path = "../bootty-surface" }
png.workspace = true

[dev-dependencies]
proptest.workspace = true
rstest.workspace = true
serde_json.workspace = true
unicode-width.workspace = true
